
2021-02-17  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: If PIC 9 field in index had HIGH-VALUES set to all 9s
	* common.c: Add  'cob_get_env' to check for 'envname' then 'COB_envname'
	* fileio.c: Changed to use cob_get_env
				Changed to process IO_OPTIONS then IX/RL/SQ/LS_OPTIONS
				then IO_filename 
	* fodbc.c: Use indicator variable for adhoc SQL statements

2021-02-16  Ron Norman <rjn@inglenet.com>

	* common.h: Added COB_XFDT_COMP5IDX and COB_XFDT_COMP5REL
	* file.h: Added fields for the rid_tablename processing
	* fileio.c: Add 'dbase' flag for modules to indicate which are database
	           Added for IO_ or IX_ 'limit=num' where 'num' is the number of
			   rows to be read from the table with one SELECT
	* foci.c: Limit rows read at once by a SELECT and continue after
	* fodbc.c: Limit rows read at once by a SELECT and continue after
	* fsqlxfd.c: Changes for limit on rows read, handle sequence usage
			and some date conversion fixes

2021-02-13  Ron Norman <rjn@inglenet.com>

	* coblocal.h: Add 'cob_stop_run_commit' 
	* common.c: On STOP RUN either commit or rollback pending updates

2021-02-12  Ron Norman <rjn@inglenet.com>

	* fodbc.c, fileio.h: Removed 'dateFormat' as it was unused
	* foci.c: Fix to set NLS_DATE_FORMAT and NLS_TIMESTAMP_FORMAT
	* fsqlxfd.c: Improved conversion of DATE/TIME data

2021-02-11  Ron Norman <rjn@inglenet.com>

	* fileio.c: Added a few more checks with possible error message during
			ROLLBACK processing if the QBL file has a problem being read
	* termio.c: Added bounds check to avoid core dump on Centos 6.8
	* fsqlxfd.c: Check for COB_SQL_HIGH_VALUE to hold some hex characters
			that should be used to replace HIGH-VALUES for fields used are 
			part of a WHERE clause (i.e. START statement)

2021-02-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Changed to use lseek with SEEK_SET as lseek using SEEK_CUR and
			a negative 'offset' was failing on Centos 6 and Solaris

2021-02-09  Ron Norman <rjn@inglenet.com>