@@ -40,6 +40,10 @@
 void cob_odbc_init_fileio (cob_file_api *a);
 
 /* Local variables */
+#ifdef COB_DEBUG_LOG
+static const char *condname[20] = {"0","EQ","LT","LE","GT","GE","NE","FI","LA",
+				"9","10","11","12","13","14","15","COUNT","NDUP","PDUP","19"};
+#endif
 
 static int odbcStmt			(struct db_state *db, char *stmt);
 static int odbc_sync		(cob_file_api *, cob_file *);
@@ -1871,13 +1875,13 @@ odbc_start (cob_file_api *a, cob_file *f, const int cond, cob_field *key)
 		break;
 	}
 	if (fx->precnum) {
-		DEBUG_LOG("db",("~START %s index %d, cond %d, Bind %02X rec# %s\n",
-						f->select_name,ky,cond,paramtype,fx->precnum));
+		DEBUG_LOG("db",("~START %s index %d, cond %s, Bind %02X rec# %s\n",
+						f->select_name,ky,condname[cond],paramtype,fx->precnum));
 	} else {
-		DEBUG_LOG("db",("~START %s index %d, cond %d, Bind %02X\n",
-						f->select_name,ky,cond,paramtype));
+		DEBUG_LOG("db",("~START %s index %d, cond %s, Bind %02X\n",
+						f->select_name,ky,condname[cond],paramtype));
 	}
-	cob_index_to_xfd (db, fx, f, ky);
+	cob_index_to_xfd (db, fx, f, ky, cond);
 	if (fx->start && fx->start->iscursor) {
 		chkSts(db,(char*)"Pre-Close cursor",fx->start->handle,
 				SQLCloseCursor (fx->start->handle));
@@ -1927,7 +1931,7 @@ odbc_read (cob_file_api *a, cob_file *f, cob_field *key, const int read_opts)
 		odbc_close_stmt (fx->start);
 	fx->start = cob_sql_select (db, fx, ky, COB_EQ, read_opts, odbc_free_stmt);
 	odbc_close_stmt (fx->start);
-	cob_index_to_xfd (db, fx, f, ky);
+	cob_index_to_xfd (db, fx, f, ky, COB_EQ);
 	odbc_setup_stmt (db, fx, fx->start, SQL_BIND_COLS, 0);
 	if (fx->start->status) {
 		fx->start = NULL;
@@ -1975,14 +1979,17 @@ odbc_read_cont (cob_file *f)
 	struct file_xfd	*fx;
 	int			ret = COB_STATUS_00_SUCCESS;
 	int			retry = 0;
+	int			read_opts = 0;
 	char		readmsg[18];
 
 	p = f->file;
 	fx = p->fx;
 	if (p->startcond == COB_GT) {
 		strcpy(readmsg,"READ Next");
+		read_opts = fx->key[f->curkey]->where_gt.readopts;
 	} else {
 		strcpy(readmsg,"READ Prev");
+		read_opts = fx->key[f->curkey]->where_lt.readopts;
 	}
 
 TryAgain:
@@ -1991,6 +1998,7 @@ TryAgain:
 		 && db->dbStatus == db->dbStsNotFound
 		 && retry == 0) {
 			odbc_close_stmt (fx->start);
+			fx->start = cob_sql_select (db,fx,f->curkey,p->startcond,read_opts,odbc_free_stmt);
 			odbc_setup_stmt (db, fx, fx->start, SQL_BIND_COLS|SQL_BIND_WHERE, f->curkey);
 			if(chkSts(db,(char*)"Read Restart",fx->start->handle,
 					SQLExecute(fx->start->handle))){
@@ -2228,7 +2236,7 @@ odbc_delete (cob_file_api *a, cob_file *f)
 		fx->delete.text = cob_sql_stmt (db, fx, (char*)"DELETE", 0, 0, 0);
 	}
 
-	cob_index_to_xfd (db, fx, f, 0);
+	cob_index_to_xfd (db, fx, f, 0, COB_EQ);
 
 	if (!fx->delete.preped) {
 		odbc_setup_stmt (db, fx, &fx->delete, SQL_BIND_NO, 0);
@@ -2292,7 +2300,7 @@ odbc_rewrite (cob_file_api *a, cob_file *f, const int opt)
 					if (memcmp(p->suppkey, p->savekey, klen) != 0) {
 						DEBUG_LOG("db",("REWRITE: %s, index %d dups\n",f->select_name,k));
 						cob_xfd_swap_data ((char*)p->saverec, (char*)f->record->data, f->record_max);
-						cob_index_to_xfd (db, fx, f, k);	/* Put new data into Index */
+						cob_index_to_xfd (db, fx, f, k, COB_EQ);/* Put new data into Index */
 						num = odbcCountIndex (db, f, fx, k);
 						if (num > 0) {
 							ret = COB_STATUS_02_SUCCESS_DUPLICATE;
@@ -2300,7 +2308,7 @@ odbc_rewrite (cob_file_api *a, cob_file *f, const int opt)
 						DEBUG_LOG("db",("REWRITE: %s, found %d ret %02d, restore data\n",
 												f->select_name,num,ret));
 						cob_xfd_swap_data ((char*)p->saverec, (char*)f->record->data, f->record_max);
-						cob_index_to_xfd (db, fx, f, k);	/* Put old data back into Index */
+						cob_index_to_xfd (db, fx, f, k, COB_EQ);/* Put old data back into Index */
 					} else {
 						DEBUG_LOG("db",("REWRITE: %s, index %d no change\n",f->select_name,k));
 					}
