@@ -2,11 +2,16 @@
 2021-02-17  Ron Norman <rjn@inglenet.com>
 
 	* fsqlxfd.c: If PIC 9 field in index had HIGH-VALUES set to all 9s
+				cob_index_to_xfd is now passed 'cond' which 
+				if COB_FI will set the index fields to lowest value and 
+				if COB_LA will set the index fields to highest value
 	* common.c: Add  'cob_get_env' to check for 'envname' then 'COB_envname'
 	* fileio.c: Changed to use cob_get_env
 				Changed to process IO_OPTIONS then IX/RL/SQ/LS_OPTIONS
 				then IO_filename 
 	* fodbc.c: Use indicator variable for adhoc SQL statements
+				changed calls to cob_index_to_xfd
+	* foci.c: changed calls to cob_index_to_xfd
 
 2021-02-16  Ron Norman <rjn@inglenet.com>
 
